Update touch event tracking type on every touch https://bugs.webkit.org/show_bug.cgi?id=184250 <rdar://problem/39145092>

Patch by Tadeu Zagallo <tzagallo@apple.com> on 2018-05-15
Reviewed by Geoffrey Garen.

The tracking type for touch events were only update on touchstart, which meant that event
listeners added after the touchstart would always be treated as passive, even if explicitly
setting passive to false.

Source/WebKit:

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::handleTouchEventSynchronously):
(WebKit::WebPageProxy::handleTouchEvent):

LayoutTests:

* fast/events/touch/ios/touchmove-cancelable-after-touchstart-expected.txt: Added.
* fast/events/touch/ios/touchmove-cancelable-after-touchstart.html: Added.

Canonical link: https://commits.webkit.org/201131@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@231821 268f45cc-cd09-0410-ab3c-d52691b4dbfc